All Forms Working No database

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -2,7 +2,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="css_files\styles.css">
 <title>Oshud Ano</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="vendor/bootstrap.min.css">
 
 </head>
 <body>
@@ -35,7 +35,7 @@
   				<div class="profile-usermenu">
   					<ul class="nav">
   						<li class="active">
-  							<a href="index.html">
+  							<a href="/">
   							<i class="glyphicon glyphicon-home"></i>
   							Dasboard </a>
   						</li>
@@ -45,30 +45,30 @@
   							Add Product </a>
   						</li>
               <li>
-                <a href="Mahage_product.html">
+                <a href="manage_product">
                 <i class="glyphicon glyphicon-pencil"></i>
                 Manage Product </a>
               </li>
               <li>
-  							<a href="View_Invoices.html">
+  							<a href="view_invoices">
   							<i class="glyphicon glyphicon-file"></i>
   							Invoices </a>
   						</li>
               <li>
-  							<a href="payment.html">
+  							<a href="payment">
   							<i class="glyphicon glyphicon-usd"></i>
   							Payment </a>
   						</li><li>
-  							<a href="Add_purchase.html">
+  							<a href="add_purchase">
   							<i class="glyphicon glyphicon-leaf"></i>
   							Purchase </a>
   						</li><li>
-  							<a href="stock.html">
+  							<a href="stock">
   							<i class="glyphicon glyphicon-tag"></i>
   							Stock </a>
   						</li>
               <li>
-  							<a href="supplier.html">
+  							<a href="supplier">
   							<i class="glyphicon glyphicon-user"></i>
   							Supplier </a>
   						</li><li>
